codebase/deploy/k8s/overlays/prod/api-replicas.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nerv-api
spec:
  replicas: 3
